Json responses, extras deleted